[package]
name = "rust_plot"
version = "0.1.0"
edition = "2021"

[dependencies]
plotters = { version = "0.3.7", default-features = true, features = ["histogram"] }
rand = "0.9"
rand_distr = "0.5"
csv = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }